# cli

./: .gitignore  .gitlab-ci.yml  .gitmodules  .golangci.yaml  .gometalinter.json  BUILD  Gopkg.toml  Makefile  Output  README.md  WORKSPACE  activestate.ci.yaml  activestate.generators.yaml  activestate.macos.yaml  activestate.offlineinstall.yaml  activestate.windows.yaml  activestate.yaml  activestate.yml.sample  appveyor.yml  architecture.md  azure-pipelines.yml  buildplan.json  changelog.md  cla.md  deadleaves.go  excludes.txt  go.mod  go.sum  golanci.yml  install-v2.sh  keep.go  kill.go  linting-errors.txt  locker  main.go  messages.json  readme.md  shippable.yml  test.json  test.py  (+3 more)
internal/analytics/: BUILD.bazel  analytics.go  analytics_test.go  client.go  customdimensions.go  default.go  deferred.go  event.go  pageview.go
internal/api/: BUILD.bazel  api.go  api_test.go
internal/artifact/: BUILD.bazel  artifact.go
internal/config/: BUILD.bazel  config.go  config_test.go  error.go  instance.go  instance_lin_mac.go  instance_test.go  instance_windows.go  project.go  rmv_lin_mac.go  rmv_win.go  rules.go
internal/constants/: BUILD.bazel  api_settings.go  constants.go  constants_darwin.go  constants_lin_mac.go  constants_linux.go  constants_test.go  constants_win.go  generated.go
internal/constraints/: BUILD.bazel  constraints.go  constraints_test.go
internal/distribution/: BUILD.bazel  distribution.go  distribution_test.go
internal/download/: BUILD.bazel  buffer.go  get.go  get_test.go  manager.go  manager_test.go
internal/environment/: BUILD.bazel  environment.go  environment_test.go
internal/failures/: BUILD.bazel  README.md  errors.go  failures.go  failures_test.go
internal/fileutils/: BUILD.bazel  IsWritable.ps1  a_fileutils-packr.go  filesutil_windows.go  fileutils.go  fileutils_lin.go  fileutils_lin_mac.go  fileutils_lin_mac_test.go  fileutils_linux_darwin.go  fileutils_test.go  fileutils_win.go  fileutils_win_test.go  moveallfiles_test.go  path_helpers_lin_mac.go  path_helpers_win.go  replace.go  replace_bench_test.go  replace_stream.go  replace_stream_test.go
internal/locale/: BUILD.bazel  a_locale-packr.go  errors.go  errors_test.go  external.go  locale-packr.go  locale.go  locale_test.go
internal/logging/: BUILD.bazel  defaults.go  defaults_test.go  file.go  file_test.go  formatter.go  logging.go  logging_test.go  ring_buffer.go  ring_buffer_test.go  rollbar.go  rotate.go  utils.go  utils_test.go
internal/print/: BUILD.bazel  print.go  print_test.go
internal/scm/: BUILD.bazel  scm.go  scm_test.go
internal/subshell/: BUILD.bazel  a_subshell-packr.go  subshell-packr.go  subshell.go  subshell_darwin.go  subshell_lin_mac.go  subshell_lin_mac_test.go  subshell_lin_test.go  subshell_linux.go  subshell_linux_test.go  subshell_test.go  subshell_win.go  subshell_win_test.go  subshell_windows_test.go  subshell_without_state_test.go  termecho_darwin.go  termecho_linux.go  termecho_unix.go  termecho_windows.go
internal/surveyor/: BUILD.bazel  surveyor.go
internal/updater/: BUILD.bazel  autoupdate.go  autoupdate_test.go  check.go  check_test.go  checker.go  checksrvc.go  fetcher.go  fetcher_lin_mac.go  fetcher_windows.go  hide_lin_mac.go  hide_win.go  lock_test.go  pid.go  requester.go  update.go  updater.go  updater_lin_mac.go  updater_lin_mac_test.go  updater_test.go  updater_win.go
internal/variables/: BUILD.bazel  common_test.go  config.go  config_test.go  expander.go  expander_test.go  prompting_expander_test.go  variables.go  variables_test.go
internal/virtualenvironment/: BUILD.bazel  virtualenvironment.go  virtualenvironment_lin_mac.go  virtualenvironment_lin_test.go  virtualenvironment_mac_test.go  virtualenvironment_test.go  virtualenvironment_win.go  virtualenvironment_win_lin_test.go  virtualenvironment_win_mac_test.go  virtualenvironment_win_test.go
pkg/projectfile/: BUILD.bazel  a_projectfile-packr.go  create_test.go  nameval.go  nameval_data_test.go  nameval_test.go  project_internal_test.go  projectfield.go  projectfield_test.go  projectfile.go  projectfile_darwin_test.go  projectfile_linux_test.go  projectfile_test.go  projectfile_without_state_test.go  template.go  variables.go  variables_test.go  yamlfield.go  yamlfield_test.go  yamlfilemod.go  yamlfilemod_test.go  yamlreader.go  yamlreader_test.go
scripts/artifact-generator/: BUILD.bazel  main.go  main_test.go
scripts/constants-generator/: BUILD.bazel  main.go  main_test.go
scripts/s3-deployer/: BUILD.bazel  main.go  main_test.go
scripts/update-generator/: BUILD.bazel  main.go  main_test.go  upgen_int_test.go
state/: BUILD.bazel  cmd.go  cmdtree.go  forward.go  forward_lin_mac_test.go  forward_test.go  main.go  state.go  state_external.go  state_internal.go  state_test.go
state/activate/: BUILD.bazel  activate.go  activate2.go  activate_int_test.go  activate_lin_test.go  activate_test.go  new.go  new_test.go
state/auth/: BUILD.bazel  auth.go  auth_int_test.go  auth_test.go  keypair.go  login.go  login_with_keypair_test.go  signup.go  token.go
state/env/: BUILD.bazel  env.go  env_test.go
state/events/: events.go  events_test.go
state/export/: export.go  jwt.go  privkey.go  recipe.go  recipe_test.go
state/fork/: fork.go  fork_test.go
state/hook/: BUILD.bazel  hook.go  hook_test.go
state/install/: install.go  install_test.go
state/invite/: invite.go  invite_test.go  orgrole.go
state/keypair/: auth.go  auth_test.go  generate.go  generate_test.go  helpers.go  keypair.go  keypair_test.go
state/new/: BUILD.bazel  new.go  new_test.go
state/organizations/: BUILD.bazel  organizations.go  organizations_test.go
state/package/: add.go  add_test.go  import.go  list.go  list_test.go  package.go  package_test.go  remove.go  remove_test.go  search.go  table.go  update.go  update_test.go
state/projects/: BUILD.bazel  list.go  projects.go  projects_test.go
state/pull/: pull.go  pull_test.gox
state/run/: BUILD.bazel  run.go  run_test.go  run_with_args_test.go
state/scripts/: edit.go  edit_test.go  scripts.go  scripts_test.go
state/secrets/: common.go  (+24 more)
(+6596 files in other folders)
