load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["constraints.go"],
    importpath = "github.com/ActiveState/cli/internal/constraints",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/constants:go_default_library",
        "//pkg/projectfile:go_default_library",
        "//vendor/github.com/ActiveState/sysinfo:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["constraints_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//internal/constants:go_default_library",
        "//internal/environment:go_default_library",
        "//pkg/projectfile:go_default_library",
        "//vendor/github.com/ActiveState/sysinfo:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
