load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["distribution.go"],
    importpath = "github.com/ActiveState/cli/internal/distribution",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/artifact:go_default_library",
        "//internal/constants:go_default_library",
        "//internal/download:go_default_library",
        "//internal/failures:go_default_library",
        "//internal/fileutils:go_default_library",
        "//internal/locale:go_default_library",
        "//internal/logging:go_default_library",
        "//internal/print:go_default_library",
        "//vendor/github.com/ActiveState/sysinfo:go_default_library",
        "//vendor/github.com/mholt/archiver:go_default_library",
        "//vendor/github.com/vbauerster/mpb:go_default_library",
        "//vendor/github.com/vbauerster/mpb/decor:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["distribution_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
