load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "get.go",
        "manager.go",
    ],
    importpath = "github.com/ActiveState/cli/internal/download",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/constants:go_default_library",
        "//internal/environment:go_default_library",
        "//internal/failures:go_default_library",
        "//internal/locale:go_default_library",
        "//internal/logging:go_default_library",
        "//vendor/github.com/vbauerster/mpb:go_default_library",
        "//vendor/github.com/vbauerster/mpb/decor:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "get_test.go",
        "manager_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
