load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["environment.go"],
    importpath = "github.com/ActiveState/cli/internal/environment",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "go_default_test",
    srcs = ["environment_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/config:go_default_library",
        "//internal/constants:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
