load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["fileutils.go"],
    importpath = "github.com/ActiveState/cli/internal/fileutils",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/failures:go_default_library",
        "//internal/logging:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["fileutils_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/environment:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
