load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["print.go"],
    importpath = "github.com/ActiveState/cli/internal/print",
    visibility = ["//:__subpackages__"],
    deps = ["//vendor/github.com/fatih/color:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["print_test.go"],
    embed = [":go_default_library"],
)
