load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["surveyor.go"],
    importpath = "github.com/ActiveState/cli/internal/surveyor",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/locale:go_default_library",
        "//vendor/gopkg.in/AlecAivazis/survey.v1/core:go_default_library",
    ],
)
