load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["variables.go"],
    importpath = "github.com/ActiveState/cli/internal/variables",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/constraints:go_default_library",
        "//internal/failures:go_default_library",
        "//pkg/projectfile:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["variables_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/projectfile:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
