load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["projectfile.go"],
    importpath = "github.com/ActiveState/cli/pkg/projectfile",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/constants:go_default_library",
        "//internal/failures:go_default_library",
        "//internal/locale:go_default_library",
        "//internal/logging:go_default_library",
        "//vendor/github.com/mitchellh/hashstructure:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["projectfile_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//internal/constants:go_default_library",
        "//internal/environment:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)
