load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/ActiveState/cli/scripts/constants-generator",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/constants/preprocess:go_default_library",
        "//scripts/constants-generator/vendor/github.com/dave/jennifer/jen:go_default_library",
    ],
)

go_binary(
    name = "constants-generator",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/environment:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
