load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["activate.go"],
    importpath = "github.com/ActiveState/cli/state/activate",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/failures:go_default_library",
        "//internal/locale:go_default_library",
        "//internal/logging:go_default_library",
        "//internal/print:go_default_library",
        "//internal/scm:go_default_library",
        "//internal/subshell:go_default_library",
        "//internal/virtualenvironment:go_default_library",
        "//pkg/cmdlets/commands:go_default_library",
        "//pkg/cmdlets/hooks:go_default_library",
        "//pkg/projectfile:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["activate_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
)
