load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "login.go",
        "signup.go",
        "token.go",
    ],
    importpath = "github.com/ActiveState/cli/state/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/api:go_default_library",
        "//internal/api/client/authentication:go_default_library",
        "//internal/api/client/users:go_default_library",
        "//internal/api/models:go_default_library",
        "//internal/failures:go_default_library",
        "//internal/locale:go_default_library",
        "//internal/logging:go_default_library",
        "//internal/print:go_default_library",
        "//internal/surveyor:go_default_library",
        "//pkg/cmdlets/commands:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/gopkg.in/AlecAivazis/survey.v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["auth_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//internal/api:go_default_library",
        "//internal/api/models:go_default_library",
        "//internal/constants:go_default_library",
        "//internal/environment:go_default_library",
        "//internal/logging:go_default_library",
        "//internal/testhelpers/httpmock:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
