load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["hook.go"],
    importpath = "github.com/ActiveState/cli/state/hook",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/failures:go_default_library",
        "//internal/locale:go_default_library",
        "//internal/logging:go_default_library",
        "//internal/print:go_default_library",
        "//pkg/cmdlets/commands:go_default_library",
        "//pkg/cmdlets/hooks:go_default_library",
        "//pkg/projectfile:go_default_library",
        "//state/hook/add:go_default_library",
        "//state/hook/remove:go_default_library",
        "//vendor/github.com/bndr/gotabulate:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["hook_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//internal/environment:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
